--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@hookform/error-message": "^2.0.1",
+    "@mui/material": "^6.1.6",
     "@react-hook/window-scroll": "^1.3.0",
+    "@tanstack/react-query": "^5.59.18",
+    "@tanstack/react-query-devtools": "^5.59.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,17 +18,22 @@
     "@types/node": "^16.18.118",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "scripts": {
     "start": "craco start",
+    "start:https": "set HTTPS=true&&set SSL_CRT_FILE=./mkcert/cert.pem&&set SSL_KEY_FILE=./mkcert/key.pem&&craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject"
