--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ REACT_APP_SERVER_HOST="https://easyex.online"
 REACT_APP_SERVER_PORT="30581"
 REACT_APP_SERVER_URL="https://easyex.online:30581"
 REACT_APP_NET_TYPE="TESTNET"
+
+REACT_APP_SOCIAL_LOGIN_REDIRECT_URL="localhost:3000"
+REACT_APP_GOOGLE_CLIENT_ID=""
+REACT_APP_GOOGLE_SECRET=""
