--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "multicoin-address-validator": "^0.5.22",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@types/multicoin-address-validator": "^0.5.3",
     "craco": "^0.0.3",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
