--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REACT_APP_HOST="localhost"
 REACT_APP_PORT="3000"
-REACT_APP_URL="localhost:3000"
+REACT_APP_URL="http://localhost:3000"
 REACT_APP_SERVER_HOST="https://easyex.online"
 REACT_APP_SERVER_PORT="30581"
 REACT_APP_SERVER_URL="https://easyex.online:30581"
