--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^16.18.118",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@workmate/country-and-currency": "^1.2.2",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
